--- a/package.json
+++ b/package.json
@@ -7,15 +7,16 @@
     "lodash.get": "^4.4.2",
     "neo4j-driver": "^1.5.1",
     "react": "^16.2.0",
+    "react-color": "^2.14.0",
     "react-dom": "^16.2.0",
     "react-redux": "^5.0.6",
     "react-scripts": "1.0.17",
     "recompose": "^0.26.0",
     "redux": "^3.7.2",
     "redux-thunk": "^2.2.0",
+    "reselect": "^3.0.1",
     "semantic-ui-css": "^2.2.14",
-    "semantic-ui-react": "^0.78.2",
-    "react-color": "^2.14.0"
+    "semantic-ui-react": "^0.78.2"
   },
   "scripts": {
     "start": "react-scripts start",
