Apply redux undo to graph reducer

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "recompose": "^0.26.0",
     "redux": "^3.7.2",
     "redux-thunk": "^2.2.0",
+    "redux-undo": "^0.6.1",
     "reselect": "^3.0.1",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^0.83.0"
