--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "graph-app-kit": "^1.0.4",
     "lodash.find": "^4.6.0",
     "lodash.get": "^4.4.2",
+    "memoizee": "^0.4.14",
     "neo4j-driver": "^1.6.2",
     "react": "^16.2.0",
     "react-color": "^2.14.0",
