Render SVG with crel instead of server-side React.
This is to avoid silly warnings from React about setting
key attributes.

--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "crel": "^4.2.1",
     "lodash.find": "^4.6.0",
     "lodash.get": "^4.4.2",
     "memoizee": "^0.4.14",
