--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-dom": "^16.8.0",
     "react-redux": "^5.0.6",
     "react-scripts": "=2.1.8",
+    "react-youtube": "^7.13.0",
     "recompose": "^0.26.0",
     "redux": "^3.7.2",
     "redux-thunk": "^2.2.0",
