Format last accessed time as relative to now.

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "crel": "^4.2.1",
+    "date-fns": "^2.16.1",
     "lodash.find": "^4.6.0",
     "lodash.get": "^4.4.2",
     "memoizee": "^0.4.14",
