--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@japont/unicode-range": "^1.0.0",
     "date-fns": "^2.16.1",
     "graphql": "^15.5.1",
     "js-base64": "^3.6.0",
