--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-color": "^2.14.0",
     "react-document-title": "^2.0.3",
     "react-dom": "^16.8.0",
+    "react-from-dom": "^0.6.1",
     "react-redux": "^5.0.6",
     "react-scripts": "=2.1.8",
     "react-youtube": "^7.13.0",
