--- a/package.json
+++ b/package.json
@@ -7,26 +7,36 @@
   "dependencies": {
     "@japont/unicode-range": "^1.0.0",
     "@swc/helpers": "~0.5.0",
+    "date-fns": "^2.30.0",
+    "graphql": "^16.6.0",
     "js-base64": "^3.7.5",
+    "lodash.find": "^4.6.0",
     "memoizee": "^0.4.15",
+    "neo4j-driver": "^5.8.1",
     "react": "18.2.0",
+    "react-color": "^2.19.3",
+    "react-document-title": "^2.0.3",
     "react-dom": "18.2.0",
+    "react-from-dom": "^0.6.2",
     "react-recompose": "^0.33.0",
     "react-redux": "^8.0.5",
+    "react-youtube": "^10.1.0",
+    "redux": "^4.2.1",
     "redux-thunk": "^2.4.2",
     "redux-undo": "^1.0.1",
     "reselect": "^4.1.8",
-    "semantic-ui-css": "^2.5.0"
+    "semantic-ui-css": "^2.5.0",
+    "semantic-ui-react": "^2.1.4"
   },
   "devDependencies": {
-    "@nx/cypress": "16.1.4",
-    "@nx/esbuild": "16.1.4",
-    "@nx/eslint-plugin": "16.1.4",
-    "@nx/js": "16.1.4",
-    "@nx/linter": "16.1.4",
-    "@nx/react": "16.1.4",
-    "@nx/vite": "16.1.4",
-    "@nx/workspace": "16.1.4",
+    "@nx/cypress": "16.2.2",
+    "@nx/esbuild": "16.2.2",
+    "@nx/eslint-plugin": "16.2.2",
+    "@nx/js": "16.2.2",
+    "@nx/linter": "16.2.2",
+    "@nx/react": "16.2.2",
+    "@nx/vite": "16.2.2",
+    "@nx/workspace": "16.2.2",
     "@swc/cli": "~0.1.62",
     "@swc/core": "~1.3.51",
     "@testing-library/jest-dom": "^5.16.5",
@@ -53,10 +63,9 @@
     "eslint-plugin-react-hooks": "4.6.0",
     "jest-watch-typeahead": "^2.2.2",
     "jsdom": "~20.0.3",
-    "nx": "16.1.4",
+    "nx": "16.2.2",
     "nx-cloud": "16.0.5",
     "prettier": "^2.6.2",
-    "react-test-renderer": "18.2.0",
     "typescript": "5.0.4",
     "vite": "4.3.7",
     "vite-plugin-eslint": "^1.8.1",
