--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "@japont/unicode-range": "^1.0.0",
     "@swc/helpers": "~0.5.0",
+    "d3-shape": "^3.2.0",
     "date-fns": "^2.30.0",
     "graphql": "^16.6.0",
     "js-base64": "^3.7.5",
@@ -28,21 +29,38 @@
     "redux-undo": "^1.0.1",
     "reselect": "^4.1.8",
     "semantic-ui-css": "^2.5.0",
-    "semantic-ui-react": "^2.1.4"
+    "semantic-ui-react": "^2.1.4",
+    "tslib": "^2.3.0"
   },
   "devDependencies": {
+    "@babel/preset-react": "^7.14.5",
     "@nx/cypress": "16.2.2",
     "@nx/esbuild": "16.2.2",
     "@nx/eslint-plugin": "16.2.2",
-    "@nx/js": "16.2.2",
+    "@nx/jest": "16.2.2",
+    "@nx/js": "16.7.2",
     "@nx/linter": "16.2.2",
     "@nx/react": "16.2.2",
+    "@nx/rollup": "16.2.2",
+    "@nx/storybook": "^16.7.2",
     "@nx/vite": "16.2.2",
+    "@nx/webpack": "^16.7.2",
     "@nx/workspace": "16.2.2",
+    "@rollup/plugin-url": "^7.0.0",
+    "@storybook/addon-essentials": "^7.2.1",
+    "@storybook/addon-interactions": "^7.2.1",
+    "@storybook/core-server": "^7.2.1",
+    "@storybook/jest": "~0.1.0",
+    "@storybook/react-webpack5": "^7.2.1",
+    "@storybook/test-runner": "^0.13.0",
+    "@storybook/testing-library": "~0.2.0",
+    "@svgr/rollup": "^6.1.2",
     "@swc/cli": "~0.1.62",
     "@swc/core": "~1.3.51",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "14.0.0",
+    "@types/d3-shape": "^3.1.1",
+    "@types/jest": "^29.4.0",
     "@types/memoizee": "^0.4.8",
     "@types/node": "18.14.2",
     "@types/react": "18.0.28",
@@ -53,6 +71,8 @@
     "@vitejs/plugin-react": "^3.1.0",
     "@vitest/coverage-c8": "0.31.0",
     "@vitest/ui": "0.31.0",
+    "babel-jest": "^29.4.1",
+    "core-js": "^3.6.5",
     "cypress": "^12.11.0",
     "esbuild": "0.17.17",
     "eslint": "~8.15.0",
@@ -63,11 +83,15 @@
     "eslint-plugin-jsx-a11y": "6.7.1",
     "eslint-plugin-react": "7.32.2",
     "eslint-plugin-react-hooks": "4.6.0",
+    "jest": "^29.4.1",
+    "jest-environment-jsdom": "^29.4.1",
     "jest-watch-typeahead": "^2.2.2",
     "jsdom": "~20.0.3",
     "nx": "16.2.2",
     "nx-cloud": "16.0.5",
     "prettier": "^2.6.2",
+    "ts-jest": "^29.1.0",
+    "ts-node": "10.9.1",
     "typescript": "5.0.4",
     "vite": "4.3.7",
     "vite-plugin-eslint": "^1.8.1",
