feat(app): add export to SPIRES format

--- a/apps/arrows-app/package.json
+++ b/apps/arrows-app/package.json
@@ -7,10 +7,12 @@
     "date-fns": "^2.29.3",
     "graphql": "^16.6.0",
     "js-base64": "^3.7.5",
+    "js-yaml": "^4.1.0",
     "lodash.find": "^4.6.0",
     "lodash.get": "^4.4.2",
     "memoizee": "^0.4.15",
     "neo4j-driver": "^5.7.0",
+    "pluralize": "^8.0.0",
     "react": "^18.2.0",
     "react-color": "^2.19.3",
     "react-document-title": "^2.0.3",
