--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "date-fns": "^2.30.0",
     "graphql": "^16.6.0",
     "js-base64": "^3.7.5",
+    "js-yaml": "^4.1.0",
     "lodash.find": "^4.6.0",
     "memoizee": "^0.4.15",
     "neo4j-driver": "^5.8.1",
+    "pluralize": "^8.0.0",
     "react": "18.2.0",
     "react-color": "^2.19.3",
     "react-document-title": "^2.0.3",
@@ -43,8 +45,11 @@
     "@swc/core": "~1.3.51",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "14.0.0",
+    "@types/js-yaml": "^4.0.9",
+    "@types/lodash": "^4.17.4",
     "@types/memoizee": "^0.4.8",
     "@types/node": "18.14.2",
+    "@types/pluralize": "^0.0.33",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
     "@types/recompose": "^0.30.10",
