--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -16,6 +16,7 @@
     "baseUrl": ".",
     "paths": {
       "@neo4j-arrows/graphics": ["libs/graphics/src/index.ts"],
+      "@neo4j-arrows/linkml": ["libs/linkml/src/index.ts"],
       "@neo4j-arrows/model": ["libs/model/src/index.ts"],
       "@neo4j-arrows/ontology-search": ["libs/ontology-search/src/index.ts"],
       "@neo4j-arrows/selectors": ["libs/selectors/src/index.ts"]
